blog picture and grid layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
 
 html {
   font-size: 62.5%; /* 1rem = 16px X 62.5% = 10px = 1rem */
+  scroll-behavior: smooth;
 }
 
 body {
@@ -41,6 +42,9 @@ body {
   background: var(--color-gray-2);
   padding-inline: 10rem;
   margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 @media screen and (max-width: 1024px) {
@@ -360,7 +364,7 @@ a {
 .cards {
   display: flex;
   justify-content: center;
-  margin: 4rem;
+  margin: 3rem 4rem;
 }
 
 .card {
@@ -435,7 +439,7 @@ a {
 @media screen and (max-width: 1350px) {
 
   .card {
-    height: 37.2vh;
+    height: 34.25vh;
   }
   
   .card__body {
@@ -498,7 +502,7 @@ a {
 
 /* --------- Footer --------- */
 .footer {
-  margin-top: 1rem;
+  margin-top: auto;
   background: var(--color-gray-1);
   border-radius: 2rem 2rem 4px 4px;
   border: 1px solid var(--color-black);
@@ -580,7 +584,6 @@ a {
   .footer {
     position: relative;
     margin-right: 0;
-    margin-top: 1rem;
   }
 }
 
@@ -781,6 +784,16 @@ h1 {
   background: var(--color-gray-2);
 }
 
+.image-container {
+  display: block;
+  margin-inline: auto;
+  height: 35rem;
+  width: fit-content;
+  aspect-ratio: 2 / 1;
+  border-radius: 6px;
+  object-fit: cover;
+}
+
 .author {
   border-radius: 0 2rem 2rem 0;
   display: grid;
@@ -816,6 +829,10 @@ h1 {
 @media screen and (max-width: 1300px) {
   .page-title, .pagination {
     margin-inline: 0;
+  }
+
+  .image-container {
+    height: 23rem;
   }
 
   .author-info p {
@@ -866,6 +883,15 @@ h1 {
 
 @media screen and (max-width: 870px) {
  
+  .blog {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+  }
+
+  .author {
+    grid-template-rows: 1fr;
+  }
+
   .author-info p {
     margin-top: 0;
   }
@@ -873,6 +899,10 @@ h1 {
 }
 
 @media screen and (max-width: 780px) {
+
+  .image-container {
+    height: 18rem;
+  }
 
   .author {
     border-radius: 0 0 2rem 2rem;
@@ -887,6 +917,11 @@ h1 {
 }
 
 @media screen and (max-width: 501px) {
+
+  .image-container {
+    height: 14rem;
+  }
+
   .social-sharing {
     display: block;
   }
